# maitri

./: .env.example  .gitignore  ARCHITECTURE.md  DEMO_SCRIPT.md  EVALUATION.md  FLOWCHART.md  JUDGE_CRITIQUE.md  KAGGLE_STRATEGY.md  KAGGLE_WRITEUP.md  LICENSE  Makefile  OVERVIEW.md  README.md  REPO_STRUCTURE.md  TECH_STACK.md  VIDEO_SCRIPT.md  YOUTUBE_ASSETS.md  app.py  maitri_architecture.excalidraw  pyproject.toml  requirements.txt  space_README.md
.github/workflows/: ci.yml
assets/: maitri_demo_video.srt
data/climate/: saharsa_may2026_snapshot.json
data/facilities/: saharsa_facility_readiness.json
data/guidelines/: _README.md
eval/: harness.py
eval/reports/: verifier_metrics.json
examples/: case_1_happy_path.py  case_2_offline_ollama.py  case_2_verifier_rejects_hallucination.py  case_3_moderate_anemia.py  case_4_reduced_fetal_movement.py  case_5_safe_routing.py
scripts/: deploy_space.py  make_thumbnail.py  make_video.py  ollama_smoke.py
src/maitri/: __init__.py  audit.py  config.py  gemma_client.py  orchestrator.py
src/maitri/agents/: _json.py  formatter.py  intake.py  optimizer.py  referral_facility.py  retrieval.py  specialist.py  verifier.py
src/maitri/rag/: __init__.py  corpus.py  retriever.py
src/maitri/safety/: __init__.py  deterministic_rules.py
src/maitri/schemas/: __init__.py  messages.py
src/maitri/tools/: climate_query.py  drug_safety.py  facility_lookup.py  (+4 more)
tests/: conftest.py
tests/adversarial/: poisoned_assessments.py
tests/integration/: test_live_pipeline.py
tests/unit/: test_orchestrator_smoke.py  test_safety_rules.py
