[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maitri"
version = "0.1.0"
description = "Safety verified maternal referral co pilot built on Gemma 4"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Malav Patel" }]
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tenacity>=8.2",
    "gradio>=4.44",
    "pillow>=10.3",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
rag = [
    "lancedb>=0.10",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
